update: update auth components
